Global menu alignment to grid fixes

--- a/style/scss/4recurring/_navigation.scss
+++ b/style/scss/4recurring/_navigation.scss
@@ -90,6 +90,7 @@
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   justify-self: end;
+  margin-top: 192px;
   text-align: right;
 }
 
@@ -97,7 +98,7 @@
   @media (min-width: $px_breakpoint-primary_width) {
     font-size: 5.0rem;
     letter-spacing: 1.5rem;
-    margin-right: -1.5rem;
+    margin-right: -1.625rem;
     margin-top: 1.5rem;
   }
 
@@ -113,20 +114,20 @@
 
 .vertical_navigation-container {
   @media (min-width: $px_breakpoint-primary_width) {
-    font-size: 1.0rem;
+    font-size: .825rem;
     letter-spacing: 0.0rem;
   }
   
-  align-self: end;
+  // align-self: end;
   font-family: $font_family-retro;
-  font-size: 0.75rem;
+  font-size: 0.5rem;
   grid-column: 2 / 3;
-  grid-row: 2 / 3;
+  grid-row: 3 / 4;
   justify-self: end;
   letter-spacing: 0.1rem;
   text-transform: lowercase;
-  transform: rotate(90deg) translateY(100%);
-  transform-origin: 100% 100%;
+  // transform: rotate(90deg) translateY(100%);
+  // transform-origin: 100% 100%;
   z-index: 9;
 }
 
